# PGR2024

./: CMakeLists.txt
src/: main.cpp
